--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,13 @@
 {
   "name": "mediavault-backend",
-  "version": "1.9.25",
+  "version": "1.9.26",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "test:unit": "node scripts/unit-tests.js",
+    "test:integration-smoke": "node scripts/api-integration-smoke.js",
     "test:csv-import": "node scripts/csv-parse-smoke.js",
     "test:rbac-regression": "node scripts/rbac-regression-check.js",
     "test:migration-rehearsal": "node scripts/migration-rehearsal.js",
