--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediavault-backend",
-  "version": "1.9.28",
+  "version": "1.9.29",
   "description": "collectZ Backend API",
   "main": "server.js",
   "scripts": {
@@ -16,7 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.886.0",
     "axios": "^1.6.2",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.6",
     "csv-parse": "^5.5.6",
     "cors": "^2.8.5",
@@ -25,7 +25,7 @@
     "express-session": "^1.17.3",
     "form-data": "^4.0.0",
     "helmet": "^7.1.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
