--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ yarn-debug.log*
 yarn-error.log*
 package-lock.json
 yarn.lock
+!backend/package-lock.json
+!frontend/package-lock.json
 
 # Build outputs
 backend/dist/
