--- a/env.example
+++ b/env.example
@@ -14,6 +14,10 @@ AUDIT_LOG_MODE=failures
 # Session Configuration
 SESSION_SECRET=
 INTEGRATION_ENCRYPTION_KEY=
+# Production hardening:
+# - Use unique non-placeholder values
+# - Minimum 32 characters recommended
+# - Example generation: openssl rand -hex 32
 # Session policy
 SESSION_TTL_DAYS=7
 SESSION_MAX_PER_USER=10
@@ -36,7 +40,7 @@ REACT_APP_API_URL=/api
 
 # Build metadata (optional, recommended for version display)
 # APP_VERSION should match frontend/backend package.json version.
-APP_VERSION=1.9.25
+APP_VERSION=2.0.0-alpha.7
 # Set these at build time (example: GIT_SHA=$(git rev-parse --short HEAD))
 GIT_SHA=dev
 BUILD_DATE=unknown
